--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/react-icons": "^3.0.0",
     "autoprefixer": "10.4.14",
     "framer-motion": "^10.12.10",
     "next": "13.4.1",
